# eng

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: interactions.csv
rec/: __init__.py
rec/cli/: __init__.py  main.py
rec/cli/commands/: bml.py  config.py  hitl.py  ingest.py  mapping.py  stubs.py
rec/core/feature_engineering/: __init__.py  engine.py  feature_definitions.py
rec/core/ml_models/: __init__.py  dlrm.py  ranker.py  three_tower.py  training_pipeline.py
rec_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rec_engine/rec/: __init__.py
rec_engine/rec/bml/: __init__.py  classifier.py  entity_graph.py  feature_catalog.py  orchestrator.py
rec_engine/rec/cli/: __init__.py  main.py
rec_engine/rec/cli/commands/: __init__.py  bml.py  config.py  hitl.py  ingest.py  mapping.py  stubs.py
rec_engine/rec/config/: generator.py
rec_engine/rec/ingestion/: __init__.py  detector.py  loader.py  profiler.py  validator.py
rec_engine/rec/mapping/: __init__.py  cross_encoder.py  domain_loader.py  embedding_matcher.py  engine.py  global_resolver.py  logic_booster.py
rec_engine/rec/utils/: workspace.py
workspace/: rec_config.json
workspace/metadata/: dataset_profile.json  entity_graph.json  feature_catalog.json  feature_metadata.json  resolved_mappings.json  schema_fingerprint.json  semantic_roles.json  source_manifest.json
workspace/raw/: interactions.parquet
