[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rec-engine"
version = "0.1.0"
description = "Autonomous CLI-Only Recommendation Engine Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "polars>=0.20.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "mlflow>=2.9.0",
    "loguru>=0.7.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.4",
    "deepspeed>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[project.scripts]
rec = "rec.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["rec*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
